--- a/app/views/account_transactions/_form.html.erb
+++ b/app/views/account_transactions/_form.html.erb
@@ -43,7 +43,7 @@
 
       <div class="mb-3">
         <%= form.label :transaction_type, "Transaction Type", class: "form-label fw-bold" %>
-        <%= form.select :transaction_type, ["purchase", "withdrawal", "deposit", "transfer"], {}, class: "form-select", required: true %>
+        <%= form.select :transaction_type, ["purchase", "withdrawal", "deposit", "refund"], {}, class: "form-select", required: true %>
         <div class="invalid-feedback">Transaction type is required.</div>
       </div>
 
